Fix wrapping of odp values in tables

--- a/webapp/reusableUiComponents/thousandSeparatedIntegerInput.less
+++ b/webapp/reusableUiComponents/thousandSeparatedIntegerInput.less
@@ -1,3 +1,7 @@
+.tsii__field {
+    position: relative;
+}
+
 .tsii__readonly-view {
   position: absolute;
   top: 10px;
